--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -13,3 +13,8 @@
   website: https://ghost.org/
   location: On a plane
   profile_image: img/alex-knight-326705-unsplash.jpg
+- id: Giulia
+  avatar: avatars/ghost.png
+  bio: Ecologa
+  website: https://thepalebluedot.it/
+  location: London
