--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-remark-responsive-iframe": "2.2.4",
     "gatsby-remark-smartypants": "2.1.2",
     "gatsby-source-filesystem": "2.1.6",
+    "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-json": "2.2.2",
     "gatsby-transformer-remark": "2.6.9",
     "gatsby-transformer-sharp": "2.2.4",
