--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -7,7 +7,7 @@
   location: On a plane
   profile_image: img/alex-knight-326705-unsplash.jpg
 - id: Giulia
-  avatar: avatars/ghost.png
+  avatar: avatars/author-giulia-bernardini-blog-pale-blue-dot.jpg
   bio: Ecologa
   website: https://thepalebluedot.it/
   location: London
